Attempt to fix overflow issue

--- a/prom-invitation/src/style.css
+++ b/prom-invitation/src/style.css
@@ -14,6 +14,8 @@
     margin: 0;
     padding: 0;
     font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+    overflow-x: hidden;
+    overflow-y: hidden;
 }
 
 body {
